Closed
Bug 1519401
Opened 6 years ago
Closed 6 years ago
ARM64 Ion: check-richards.js:71:3 Error: Assertion failed: got 2420, expected 2322
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla66
| Tracking | Status | |
|---|---|---|
| firefox66 | --- | fixed |
People
(Reporter: nbp, Assigned: nbp)
References
Details
(Whiteboard: [arm64:m2])
Attachments
(1 file)
|
1.14 KB,
patch
|
sstangl
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Updated•6 years ago
|
Whiteboard: [arm64:m3]
| Assignee | ||
Comment 1•6 years ago
|
||
This was a minor detail left-over when converting the CodeGenerator::visitBitAndAndBranch code.
This patch fixes the issue witch check-richards.js test case.
Attachment #9036575 -
Flags: review?(sstangl)
Updated•6 years ago
|
Attachment #9036575 -
Flags: review?(sstangl) → review+
Comment 2•6 years ago
|
||
check-richards as a whole passes now? That's wonderful!
Pushed by npierron@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6362baa5cb54
ARM64: Fix CodeGenerator::LBitAndAndBranch to use the condition flag of the MIR. r=sstangl
| Assignee | ||
Updated•6 years ago
|
Whiteboard: [arm64:m3] → [arm64:m2]
Comment 4•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox66:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
You need to log in
before you can comment on or make changes to this bug.
Description
•