Bug 1519401 - ARM64: Fix CodeGenerator::LBitAndAndBranch to use the condition flag of the MIR. r=sstangl